package org.vitapasser.photocopypoint.Model;

public record Operator(Long id, String name) {}
