package org.vitapasser.photocopypoint.Model;

public record OrderIDAndOddMany(long orderID, Money oddMoney) {}
